SpringBootRest Conectou BD - 26/01/22 - 14h40.

--- a/springboot-rest-api-sample/src/main/resources/application.properties
+++ b/springboot-rest-api-sample/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 #Spring Boot server configuration
 
 spring.datasource.url = jdbc:postgresql://localhost:5432/dbspringbootrest
-spring.datasource.username = postgres
-spring.datasource.password = admin
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
 
 server.address=0.0.0.0
 server.port=8000
