--- a/springboot-rest-api-sample/src/main/resources/application.properties
+++ b/springboot-rest-api-sample/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-plataform.org.hibernate.dialect.PostgreSQL14Dialect
 
+server.servlet.context-path=/springboot-rest-api-sample
 server.address=0.0.0.0
 server.port=8000
 
